Fix color scheme switching

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           Iste harum ex quia quas placeat!
         </p>
       </section>
-      <color-properties preview-colors></color-properties>
+      <color-properties></color-properties>
     </main>
   </scroll-snap-root>
 </body>
