Add main-content, add CSS reset

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <side-nav slot="side-nav">
       <color-scheme-select></color-scheme-select>
     </side-nav>
-    <main class="content-wrapper" slot="main-content">
+    <main-content slot="main-content">
       <header>
         <h1>Welcome to Hazeland!</h1>
         <p>
@@ -49,7 +49,7 @@
         </p>
       </section>
       <color-properties></color-properties>
-    </main>
+    </main-content>
   </scroll-snap-root>
 </body>
 </html>
