--- a/public/pages/colors.html
+++ b/public/pages/colors.html
@@ -13,9 +13,9 @@
     <side-nav slot="side-nav">
       <color-scheme-select></color-scheme-select>
     </side-nav>
-    <main class="content-wrapper" slot="main-content">
+    <main-content class="content-wrapper" slot="main-content">
       <color-properties preview-colors></color-properties>
-    </main>
+    </main-content>
   </scroll-snap-root>
 </body>
 </html>
